prepare for java 20